# JoyShockLibrary

JoyShockLibrary/: CMakeLists.txt  InputHelpers.cpp  JoyShockLibrary.cpp
JoyShockLibrary/helpers/: CRC32.cpp  CRC32.h
JoyShockLibrary/jscontroller/: ControllerExceptions.h  JoyShock.cpp  JoyShockController.cpp  JoyShockController.h
JoyShockLibrary/jscontroller/controllers/: JSDualSense.cpp  JSDualSense.h  JSDualShock4.cpp  JSDualShock4.h  JSSwitch.cpp  JSSwitch.h
